# code-indexer

./: .gitignore  API_USAGE.md  EXPANDED_IMPLEMENTATION_SUMMARY.md  FINAL_MULTI_SESSION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  MULTI_SESSION_SUCCESS.md  Makefile  QUICK_START.md  README.md  TOOLS.md  apply-uvx-fixes.sh  build-for-uvx.sh  build.py  config.yaml  go.mod  go.sum  mcp-debug.sh  mcp-http-client.js  mcp-stdio-bridge.py  mcp-stdio-wrapper.py  mcp-wrapper.sh  mcp_bridge.py  pyproject.toml  setup.py  test-config.yaml  test-daemon-mode.sh  test-integration.sh  test-mcp-protocol.sh  test-mcp-startup.sh  test_api.sh  vscode-multi-session-config.json
.serena/: project.yml
.serena/cache/go/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: mcp-code-indexer-project-overview.md
cmd/server/: main.go
docs/: AUGMENT_CODE_SETUP.md  CURSOR_AUGMENT_INTEGRATION.md  CURSOR_MCP_SETUP.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  FINAL_24_TOOLS_SUMMARY.md  INTEGRATION_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  MCP_TOOLS_REFERENCE.md  MIGRATION_TO_UVX.md  MODULAR_REFACTOR_SUMMARY.md  MULTI_IDE_ARCHITECTURE.md  MULTI_IDE_SETUP.md  MULTI_SESSION_IMPLEMENTATION.md  TOOLS.md  UVX_INSTALLATION.md  UVX_MCP_SETUP.md
examples/: basic_usage.md  test_server.go
internal/analysis/: analyzers.go  code_smells.go  dependency.go  engine.go  pattern_search.go  tools.go
internal/chunking/: chunker.go  chunker_test.go
internal/config/: config.go  config_test.go
internal/connection/: manager.go
internal/indexer/: indexer.go
internal/locking/: manager.go
internal/ml/: engine.go  models.go  tools.go
internal/models/: engine.go
internal/parser/: parser.go  parser_test.go  treesitter.go  treesitter_test.go
internal/repository/: manager.go  manager_enhanced_test.go
internal/search/: engine.go
internal/server/: README.md  handlers_ai.go  handlers_core.go  handlers_project.go  handlers_utility.go  helpers.go  server.go  session_wrapper.go  tools.go
internal/session/: context.go  manager.go
pkg/types/: types.go
pkg/utils/: utils.go
python/mcp_code_indexer/: __init__.py
scripts/: build-for-uvx.sh  setup-cursor-integration.sh  setup-ide-integration.sh  test-multi-ide.sh  test-uvx-setup.sh
