[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-code-indexer"
version = "1.1.0"
description = "MCP Code Indexer - Index and search source code repositories via Model Context Protocol"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MCP Code Indexer Team", email = "team@mcp-code-indexer.dev"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "code-indexer",
    "search",
    "llm",
    "ai",
    "development-tools"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/chithien0909/code-indexer"
Repository = "https://github.com/chithien0909/code-indexer.git"
Issues = "https://github.com/chithien0909/code-indexer/issues"

[project.scripts]
code-indexer = "mcp_code_indexer:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["mcp_code_indexer*"]

[tool.setuptools.package-data]
mcp_code_indexer = [
    "bin/*",
    "config/*",
    "*.yaml",
    "*.yml",
    "*.json"
]
